--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@han/heroui-kit",
-  "version": "0.1.0",
+  "name": "@byhandi/heroui-kit",
+  "version": "0.1.2",
   "description": "Opinionated HeroUI components",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -16,12 +16,12 @@
     "preview": "vite preview"
   },
   "peerDependencies": {
-    "@heroui/react": "^2.8.7",
-    "@hookform/resolvers": "^5.2.2",
-    "framer-motion": "^11.18.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-hook-form": "^7.71.1"
+    "@heroui/react": ">=2.8",
+    "@hookform/resolvers": ">=3",
+    "framer-motion": ">=11.5.6 || >=12.0.0",
+    "react": ">=18",
+    "react-dom": ">=18",
+    "react-hook-form": ">=7"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
